<resources>
    <string name="app_name">WeathrR</string>
    <string name="today_btn_text">Today</string>
    <string name="hourly_btn_text">Hourly</string>
    <string name="daily_btn_text">Daily</string>
    <string name="radar_btn_text">Radar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_button">Menu_button</string>
    <string name="add_location_btn">add_location_btn</string>
    <string name="settings_text">Settings</string>
    <string name="current_location">Current Location</string>
    <string name="favourite_location">Favourite Location</string>
    <string name="other_locations">Other Locations</string>
    <string name="manage_locations">Manage Locations</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="location_services">Use Location Services?</string>
    <string name="supporting_text">To continue, turn on device location, which uses Google\'s location service</string>
    <string name="failure">No, thanks</string>
    <string name="success">OK</string>
    <string name="api_key">8950e749c5d1ed3b849b80480234cd87</string>
    <string name="weather_icon">weather_icon</string>
    <string name="current_conditions">Current Conditions</string>
    <string name="clouds">Clouds</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="today_s_details">Today\'s Details</string>
    <string name="max_temp">Max. Temp</string>
    <string name="min_temp">Min. Temp</string>
    <string name="wind_gust">Max Wind Gusts</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="current_air_quality">Current Air Quality</string>
    <string name="aqi_level">AQI : %1$d</string>
    <string name="current_temp_text">%1$d°C</string>
    <string name="daily_temp_min_max">%1$d°C/%2$d°C</string>
    <string name="feels_like_text">Feels Like %1$d°C</string>
    <string name="pressure_text">%1$d hPa</string>
    <string name="humidity_text">%1$d%2$s</string>
    <string name="percent_string">%1$s%2$s</string>
    <string name="dew_text">%1$d°C</string>
    <string name="clouds_text">%1$d%2$s</string>
    <string name="wind_speed_text">%1$s m/s</string>
    <string name="wind_gusts_text">%1$s m/s</string>
    <string name="visibility_text">%1$d m</string>
    <string name="uvi_text">%1$d</string>
    <string name="aqi_1">Good\nAir quality is considered satisfactory, and air pollution poses little or no risk.</string>

    <string name="aqi_2">Fair\nAir quality is generally acceptable; however, for some pollutants, sensitive groups may experience minor health concerns.</string>

    <string name="aqi_3">Moderate\nMembers of sensitive groups may experience health effects. The general public is not likely to be affected.</string>

    <string name="aqi_4">Unhealthy for Sensitive Groups\nHealthy people may experience slight irritations and sensitive individuals will be slightly affected to a larger extent.</string>

    <string name="aqi_5">Unhealthy\nEveryone may begin to experience health effects; members of sensitive groups may experience more serious health effects</string>
    <string name="more_btn_text">more</string>
    <string name="dew_point">Dew Point</string>
    <string name="avg_visibility">Avg. Visibility</string>
    <string name="uv_index">UV Index</string>
    <string name="moonrise">Moonrise</string>
    <string name="moonset">Moonset</string>
    <string name="moon_phase">Moon Phase</string>
    <string name="past_rain_snow">"Past 1 hr. %1$s\n%2$s mm"</string>
    <string name="arcGis_api_key">AAPK40e532d3d598413eb53299f8f0860e956nIqcNeX1lkcgud1otYupidH1nFvIyWZP__gM73M6WvdMnWG8xC4HKB4-nxpSntO</string>
    <string name="wind">Wind</string>
    <string name="air_temperature">Air Temperature</string>
    <string name="cloudiness">Cloudiness</string>
    <string name="precipitation">Precipitation</string>
    <string name="morning">Morning</string>
    <string name="morning_temperature">Morning Temperature</string>
    <string name="feels_like">Feels Like</string>
    <string name="afternoon">Afternoon</string>
    <string name="uvi">UVI</string>
    <string name="afternoon_temperature">Afternoon Temperature</string>
    <string name="evening">Evening</string>
    <string name="evening_temperature">Evening Temperature</string>
    <string name="night">Night</string>
    <string name="night_temperature">Night Temperature</string>
    <string name="date">%1$s, %2$d %3$s</string>
    <string name="moonphase">Moonphase</string>
    <string-array name="layers_array">
        <item>Cloudiness</item>
        <item>Precipitation</item>
        <item>Air Temperature</item>
        <item>Accumulated Snow</item>
        <item>Wind</item>
    </string-array>
</resources>