<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">

        <item
            android:id="@+id/subtitle"
            android:title="@string/favourite_location">
            <menu>
                <item
                    android:id="@+id/item_favourite"
                    android:title="@string/current_location"/>
            </menu>
        </item>
    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/other_location"
            android:title="@string/other_locations">
            <menu>
                <item
                    android:id="@+id/item2"
                    android:title="Location2"/>
                <item
                    android:id="@+id/item3"
                    android:title="Location3" />

                <item
                    android:id="@+id/item_button"
                    android:title="@null"
                    android:enabled="false"
                    app:actionLayout="@layout/menu_button">
                </item>
            </menu>
        </item>
    </group>

</menu>